fix result detail video on mobile

--- a/webui/src/scss/_responsive.scss
+++ b/webui/src/scss/_responsive.scss
@@ -259,6 +259,14 @@
 			}
 		}
 	}
+
+	#result-detail{
+		.result-video{
+			.video-container{
+				height: 405px;
+			}
+		}
+	}
 }
 
 @media (min-width: 576px) {
